agregue el metodo que busca las actualizaciones en un JSON y algunos otros más